--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="it">
 <head>
   <meta charset="UTF-8">
-  <title>Training Plan - Giacomo</title>
+  <title>Training Plan - Nai</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Piano di allenamento personalizzato">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
