--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       color: white;
       border: none;
       border-radius: 50px;
+      margin: 20px;
       padding: 10px 20px;
       cursor: pointer;
       box-shadow: 0 2px 8px rgba(0,0,0,0.2);
